Background and button changed

--- a/no1.html
+++ b/no1.html
@@ -7,6 +7,8 @@
     <title>Piénsatelo...</title>
 </head>
 <body>
+    <!-- Fondo de corazones flotantes -->
+    <div class="background"></div>
     <div class="container_no">
         <div class="img_no">
             <img src="img/02.jpg" alt="">
@@ -17,5 +19,6 @@
             <a href="no2.html">NO</a>
         </div>
     </div>
+    <script src="script.js"></script>
 </body>
 </html>
