--- a/no2.html
+++ b/no2.html
@@ -8,6 +8,8 @@
     <title>Por favor...</title>
 </head>
 <body>
+    <!-- Fondo de corazones flotantes -->
+    <div class="background"></div>
     <div class="container_no2">
         <div class="img_no2">
             <img src="img/tite.gif" alt="">
