--- a/si.html
+++ b/si.html
@@ -8,6 +8,8 @@
     <title>Razones...</title>
 </head>
 <body>
+    <!-- Fondo de corazones flotantes -->
+    <div class="background"></div>
     <div class="container_si">
         <div class="img_si">
             <img src="img/24.jpg" alt="">
@@ -21,5 +23,6 @@
                 <a href="siguiente1.html">SIGUIENTE</a>
         </div>
     </div>
+    <script src="script.js"></script>
 </body>
 </html>
