--- a/siguiente1.html
+++ b/siguiente1.html
@@ -8,11 +8,13 @@
     <title>Razones...</title>
 </head>
 <body>
+    <!-- Fondo de corazones flotantes -->
+    <div class="background"></div>
     <div class="container_siguiente1">
         <div class="img_siguiente1">
             <img src="img/03.jpg" alt="">
         </div>
-        <h1 style="font-size: 20px">Mi morenita, sé que estamos atravesando momentos difíciles,
+        <h1 style="font-size: 17px">Mi morenita, sé que estamos atravesando momentos difíciles,
             llenos de desacuerdos y malentendidos que a veces nos hacen sentir distantes.
             Quiero que sepas que, a pesar de todo, nunca he dejado de amarte y nunca lo haré.
             En mi corazón, siempre tendrás un lugar especial, un espacio que nadie más puede
@@ -35,5 +37,6 @@
                 <a href="siguiente2.html">SIGUIENTE</a>
         </div>
     </div>
+    <script src="script.js"></script>
 </body>
 </html>
