--- a/siguiente10.html
+++ b/siguiente10.html
@@ -8,6 +8,8 @@
     <title>Razones...</title>
 </head>
 <body>
+    <!-- Fondo de corazones flotantes -->
+    <div class="background"></div>
     <div class="container_siguiente1">
         <div class="img_siguiente1">
             <img src="img/12.jpg" alt="">
@@ -17,8 +19,9 @@
             Reescribimos nuestra historia con muchísimo más amor que antes, más confianza y menos dudad, ¡Vamos! Solo
             una vez más... Volvamos a cuando nos amábamos un muchosaurio...</h1>
         <div class="btn">
-                <a href="siguiente11.html">SIGUIENTE</a>
+            <a href="siguiente11.html">SIGUIENTE</a>
         </div>
     </div>
+    <script src="script.js"></script>
 </body>
 </html>
