--- a/siguiente2.html
+++ b/siguiente2.html
@@ -8,11 +8,13 @@
     <title>Razones...</title>
 </head>
 <body>
+    <!-- Fondo de corazones flotantes -->
+    <div class="background"></div>
     <div class="container_siguiente1">
         <div class="img_siguiente1">
             <img src="img/04.jpg" alt="">
         </div>
-        <h1 style="font-size: 18px">Estoy más que seguro que nos podemos recuperar, siempre y cuando ambos nos comprometamos,
+        <h1 style="font-size: 16px">Estoy más que seguro que nos podemos recuperar, siempre y cuando ambos nos comprometamos,
             no solo con palabras sino con hechos reales. Sé que de nada servirá mil palabras bonitas si no se ven en acciones
             y quiero poder hacer todo a tu lado, darnos la mano y poder demostrar con acciones que ambos podemos si queremos.
             También deberíamos dejar de culpabilizar al otro ya que ambos somos un equipo y al entender eso al 100% dejaremos
@@ -34,5 +36,6 @@
                 <a href="siguiente3.html">SIGUIENTE</a>
         </div>
     </div>
+    <script src="script.js"></script>
 </body>
 </html>
