--- a/siguiente3.html
+++ b/siguiente3.html
@@ -8,11 +8,13 @@
     <title>Razones...</title>
 </head>
 <body>
+    <!-- Fondo de corazones flotantes -->
+    <div class="background"></div>
     <div class="container_siguiente1">
         <div class="img_siguiente1">
             <img src="img/05.jpg" alt="">
         </div>
-        <h1 style="font-size: 18px">Sé que te he lastimado y que he cometido errores que han afectado nuestra relación.
+        <h1 style="font-size: 16px">Sé que te he lastimado y que he cometido errores que han afectado nuestra relación.
             Por eso, quiero pedirte perdón por todo lo que te he hecho pasar, y decirte que lo siento de todo corazón.
             No puedo dejar de pensar en todas las palabras que debería haber dicho, en todas las cosas que debería haber
             hecho diferente. Siento que no fui lo suficientemente bueno para ti, que no te di todo lo que merecías, que
@@ -35,5 +37,6 @@
                 <a href="siguiente4.html">SIGUIENTE</a>
         </div>
     </div>
+    <script src="script.js"></script>
 </body>
 </html>
