--- a/siguiente4.html
+++ b/siguiente4.html
@@ -8,11 +8,13 @@
     <title>Razones...</title>
 </head>
 <body>
+    <!-- Fondo de corazones flotantes -->
+    <div class="background"></div>
     <div class="container_siguiente1">
         <div class="img_siguiente1">
             <img src="img/06.jpg" alt="">
         </div>
-        <h1 style="font-size: 18px">Mi corazón se siente tan pesado al pensar en el daño que te he causado. No puedo
+        <h1 style="font-size: 16.5px">Mi corazón se siente tan pesado al pensar en el daño que te he causado. No puedo
             dejar de sentir que he fallado como ser humano, al no ser capaz de cuidar adecuadamente de alguien tan
             especial como tú. Quiero que sepas que lamento profundamente haberte lastimado, y que mi arrepentimiento es
             genuino y sincero. Sé que mis acciones han causado un gran dolor en tu corazón, y eso me duele más de lo que
@@ -30,8 +32,9 @@
             amor. Te amo y aprecio todo lo que eres, y no quiero perderte. Por favor, dame la oportunidad de demostrarte
             que puedo hacer las cosas bien y cuidar de ti como te mereces.</h1>
         <div class="btn">
-                <a href="siguiente5.html">SIGUIENTE</a>
+            <a href="siguiente5.html">SIGUIENTE</a>
         </div>
     </div>
+    <script src="script.js"></script>
 </body>
 </html>
