--- a/siguiente5.html
+++ b/siguiente5.html
@@ -8,11 +8,13 @@
     <title>Razones...</title>
 </head>
 <body>
+    <!-- Fondo de corazones flotantes -->
+    <div class="background"></div>
     <div class="container_siguiente1">
         <div class="img_siguiente1">
             <img src="img/22.jpg" alt="">
         </div>
-        <h1 style="font-size: 30px">La reconciliación no significa que tengamos que olvidar lo que pasó, pero sí que
+        <h1 style="font-size: 27px">La reconciliación no significa que tengamos que olvidar lo que pasó, pero sí que
             podamos perdonarnos mutuamente y construir un futuro mejor juntos, como equipo. Sé que estás dudando y a lo
             mejor no soy la mejor persona que vayas a conocer en el mundo pero soy alguien que te ama de verdad y que
             quiere permanecer muy cerca de ti y si tengo que ir a algún lugar a buscarte, lo haré. Si tengo que perder
@@ -20,8 +22,9 @@
             logró hacerme sentir y es por eso que te pido que no dudes de mi palabra cuando te prometo con mi vida que
             todo lo que te digo es sincero y de corazón.</h1>
         <div class="btn">
-                <a href="siguiente6.html">SIGUIENTE</a>
+            <a href="siguiente6.html">SIGUIENTE</a>
         </div>
     </div>
+    <script src="script.js"></script>
 </body>
 </html>
