--- a/siguiente7.html
+++ b/siguiente7.html
@@ -8,19 +8,22 @@
     <title>Razones...</title>
 </head>
 <body>
+    <!-- Fondo de corazones flotantes -->
+    <div class="background"></div>
     <div class="container_siguiente1">
         <div class="img_siguiente1">
             <img src="img/09.jpg" alt="">
         </div>
-        <h1 style="font-size: 30px">Mi aieseca favorita, hagamos las cosas bien por favor. Sé que el camino no es fácil
+        <h1 style="font-size: 28px">Mi aieseca favorita, hagamos las cosas bien por favor. Sé que el camino no es fácil
             y tendremos caídas, abrán momentos felices y tristes, pero siempre busquemos la solución como un equipo por
             favor, los dos juntitos sin permitir a terceros. Quiero que seas tú, te quiero a ti, solo a ti... Y siéndote
             sincero, no me iré, nunca. ¿Sabes por qué? Porque estamos para sanar y aprender juntos, en ti encontré un
             corazón precioso en una generación que se rinde por lo más mínimo y no lucha por lo que quiere y ama, así
             que no pienso dejarte ir tan fácil...</h1>
         <div class="btn">
-                <a href="siguiente8.html">SIGUIENTE</a>
+            <a href="siguiente8.html">SIGUIENTE</a>
         </div>
     </div>
+    <script src="script.js"></script>
 </body>
 </html>
