--- a/siguiente8.html
+++ b/siguiente8.html
@@ -8,11 +8,13 @@
     <title>Razones...</title>
 </head>
 <body>
+    <!-- Fondo de corazones flotantes -->
+    <div class="background"></div>
     <div class="container_siguiente1">
         <div class="img_siguiente1">
             <img src="img/10.jpg" alt="">
         </div>
-        <h1 style="font-size: 30px">Sé que si te dejo ir y te pierdo, te buscaré en cualquiera que siga y jamás te voy a
+        <h1 style="font-size: 24px">Sé que si te dejo ir y te pierdo, te buscaré en cualquiera que siga y jamás te voy a
             encontrar, tú ya no estarás... Me quiero quedar contigo, no quiero perder tiempo en tratar de entender el
             porqué carajos me encantas tanto, mejor quiero usarlo para hacerte saber que soy capaz de lo que sea para que
             no te vayas. Me quiero quedar contigo porque no hay otra igual, no encontraré ese besó en ninguna otra boca,
@@ -21,8 +23,9 @@
             felices ya que no hay necesidad de hacernos ningún tipo de daño o mal. Te amo y nos extrañamos, el orgullo
             no hará nada por nosotros, nuestras acciones sí...</h1>
         <div class="btn">
-                <a href="siguiente9.html">SIGUIENTE</a>
+            <a href="siguiente9.html">SIGUIENTE</a>
         </div>
     </div>
+    <script src="script.js"></script>
 </body>
 </html>
