--- a/siguiente9.html
+++ b/siguiente9.html
@@ -8,11 +8,13 @@
     <title>Razones...</title>
 </head>
 <body>
+    <!-- Fondo de corazones flotantes -->
+    <div class="background"></div>
     <div class="container_siguiente1">
         <div class="img_siguiente1">
             <img src="img/11.jpg" alt="">
         </div>
-        <h1 style="font-size: 20px">Quiero decirte que te amo... más que a cualquier cosa en este mundo... Pero a veces
+        <h1 style="font-size: 13px">Quiero decirte que te amo... más que a cualquier cosa en este mundo... Pero a veces
             me pregunto si realmente me creerías, si alguna vez creíste en la sinceridad de mis palabras. Mi corazón se
             ha debatido entre la esperanza y el miedo, temiendo que mis sentimientos nunca fueran lo suficientemente
             claros, que mis acciones nunca hayan hablado tan fuerte como lo hacían mis pensamientos. Quiero decirte que
@@ -40,8 +42,9 @@
             imperfecto, te ama con una profundidad que trasciende cada fallo. Y por último, solo quiero decirte, que te
             amo...</h1>
         <div class="btn">
-                <a href="siguiente10.html">SIGUIENTE</a>
+            <a href="siguiente10.html">SIGUIENTE</a>
         </div>
     </div>
+    <script src="script.js"></script>
 </body>
 </html>
