--- a/index.html
+++ b/index.html
@@ -8,17 +8,20 @@
     <link rel="icon" href="img/25.jpg">
 </head>
 <body>
-        <div class="container">
-            <div class="heart-img">
-                <img src="img/01.jpg" alt="Imagen con corazón">
-            </div>
-            <h1>¿Te gustaría saber esas razones?🥰</h1>
-            <p>Nuestra relación significa todo para mí, y créeme que estoy dispuesto a hacer lo necesario para restaurar
-                la confianza y la armonía entre nosotros.</p>
-            <div class="btn">
-                <a href="si.html">SI</a>
-                <a href="no1.html">NO</a>
-            </div>
+    <!-- Fondo de corazones flotantes -->
+    <div class="background"></div>
+    <div class="container">
+        <div class="heart-img">
+            <img src="img/01.jpg" alt="Imagen con corazón">
         </div>
+        <h1>¿Te gustaría saber esas razones?🥰</h1>
+        <p>Nuestra relación significa todo para mí, y créeme que estoy dispuesto a hacer lo necesario para restaurar
+            la confianza y la armonía entre nosotros.</p>
+        <div class="btn">
+            <a href="si.html">SI</a>
+            <a href="no1.html">NO</a>
+        </div>
+    </div>
+    <script src="script.js"></script>
 </body>
 </html>
