--- a/siguiente11.html
+++ b/siguiente11.html
@@ -8,11 +8,13 @@
     <title>Razones...</title>
 </head>
 <body>
+    <!-- Fondo de corazones flotantes -->
+    <div class="background"></div>
     <div class="container_siguiente1">
         <div class="img_siguiente1">
             <img src="img/14.jpg" alt="">
         </div>
-        <h1 style="font-size: 30px">Para amarte mucho mejor que antes dime cómo te hago feliz exactamente y cómo
+        <h1 style="font-size: 24px">Para amarte mucho mejor que antes dime cómo te hago feliz exactamente y cómo
             quisieras tú que logre eso, porque quiero que me dejes intentarlo antes de que renuncies por completitititito
             a esto sin antes darme la oportunidad de demostrar que puedo. Dime ¿qué necesitas, cómo lo resuelvo? Muéstrame
             lo que quieres y te enseño lo que tengo. Así, con amor y ganas, llegamos a un punto medio. ¿Dónde está la meta?
@@ -20,8 +22,9 @@
             amo y yo haré lo mismo para que esto funcione... nos merecemos nuestro final de cuento de hadas así que ahora
             te lo pregunto directamente, ¿qué decides?...</h1>
         <div class="btn">
-                <a href="https://wa.me/+593989784873">ESPERO TU RESPUESTA..</a>
+            <a href="https://wa.me/+593989784873">ESPERO TU RESPUESTA..</a>
         </div>
     </div>
+    <script src="script.js"></script>
 </body>
 </html>
