--- a/siguiente6.html
+++ b/siguiente6.html
@@ -8,11 +8,13 @@
     <title>Razones...</title>
 </head>
 <body>
+    <!-- Fondo de corazones flotantes -->
+    <div class="background"></div>
     <div class="container_siguiente1">
         <div class="img_siguiente1">
             <img src="img/08.jpg" alt="">
         </div>
-        <h1 style="font-size: 30px">Entiendo que ambos cometimos errores y no nos culpo, al final del día solo somos dos
+        <h1 style="font-size: 20px">Entiendo que ambos cometimos errores y no nos culpo, al final del día solo somos dos
             personas que estamos aprendiendo a amar. Sé que es un proceso difícil por el que pasamos y espero que sanes
             todo lo que necesitas sanar, lo lograrás ya que siempre te he visto como alguien fuerte y también por eso sé
             que eres el amor de mi vida y la persona que escogí para mi vida. No dejes de sentir porque, aunque no nos
@@ -23,8 +25,9 @@
             ti aunque ya no estés aquí... Después de tu último "adiós" solo sentí que mi corazón agarró una silla, se
             sentó y te dijo "aquí te espero" y seré fiel a esa decisión...</h1>
         <div class="btn">
-                <a href="siguiente7.html">SIGUIENTE</a>
+            <a href="siguiente7.html">SIGUIENTE</a>
         </div>
     </div>
+    <script src="script.js"></script>
 </body>
 </html>
