Add spotify and envelope section

--- a/si.html
+++ b/si.html
@@ -8,6 +8,15 @@
     <title>Razones...</title>
 </head>
 <body>
+    <div class="spotify-container">
+        <iframe class="spotify-iframe" style="border-radius:12px"
+                src="https://open.spotify.com/embed/playlist/4MGcYf8fRumvGiJPiVYOVw?utm_source=generator"
+                width="100%" height="352" frameBorder="0"
+                allowfullscreen=""
+                allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+                loading="lazy">
+        </iframe>
+    </div>
     <!-- Fondo de corazones flotantes -->
     <div class="background"></div>
     <div class="container_si">
