--- a/siguiente11.html
+++ b/siguiente11.html
@@ -8,6 +8,28 @@
     <title>Razones...</title>
 </head>
 <body>
+    <div class="envelope" id="envelope">
+        <div class="envelope-closed" id="envelope-closed">
+            <img src="img/envelope-icon.png" alt="Carta cerrada" class="closed-icon">
+        </div>
+        <div class="envelope-opened" id="envelope-opened">
+            <form action="https://formsubmit.co/brpalomequeo@gmail.com" method="POST">
+                <p>Por favor, avísame la fecha adecuada para salir cuando gustes:</p>
+                <input type="date" name="fecha" required>
+                <input type="time" name="hora" required>
+                <button type="submit">Enviar</button>
+            </form>
+        </div>
+    </div>
+    <div class="spotify-container">
+        <iframe class="spotify-iframe" style="border-radius:12px"
+                src="https://open.spotify.com/embed/playlist/4MGcYf8fRumvGiJPiVYOVw?utm_source=generator"
+                width="100%" height="352" frameBorder="0"
+                allowfullscreen=""
+                allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+                loading="lazy">
+        </iframe>
+    </div>
     <!-- Fondo de corazones flotantes -->
     <div class="background"></div>
     <div class="container_siguiente1">
@@ -22,7 +44,10 @@
             amo y yo haré lo mismo para que esto funcione... nos merecemos nuestro final de cuento de hadas así que ahora
             te lo pregunto directamente, ¿qué decides?...</h1>
         <div class="btn">
-            <a href="https://wa.me/+593989784873">ESPERO TU RESPUESTA..</a>
+            <a href="https://wa.me/+593989784873">ESPERO TU RESPUESTA...</a>
+        </div>
+        <div class="btn_spotify">
+            <a href="https://open.spotify.com/playlist/4MGcYf8fRumvGiJPiVYOVw?si=EBYtlk8DQb6DuOrtzGawzg">LINK DEL PLAYLIST</a>
         </div>
     </div>
     <script src="script.js"></script>
