New html file and video

--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
     <div class="background"></div>
     <div class="container">
         <div class="heart-img">
-            <img src="img/01.jpg" alt="Imagen con corazón">
+            <a href="video.html">
+                <img src="img/01.jpg" alt="Imagen con corazón">
+            </a>
         </div>
         <h1>¿Te gustaría saber esas razones?🥰</h1>
         <p>Nuestra relación significa todo para mí, y créeme que estoy dispuesto a hacer lo necesario para restaurar
