--- a/video.html
+++ b/video.html
@@ -13,7 +13,7 @@
 
     <div class="video-container">
         <video width="80%" controls autoplay>
-            <source src="video_01.mp4" type="video/mp4">
+            <source src="video02.mp4" type="video/mp4">
             Tu navegador no soporta la reproducción de videos.
         </video>
         <div class="btn">
